tests/unit/parser/invalid-domains/types-section-without-requirement.pddl
; types section (3:10) is defined in domain, but `:typing` does not appear in requirements section
(define (domain types-section-without-requirement)
        (:types a b c))